// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a simple Tag instance 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-tag"
    contentEditable={false}
    direction="right"
    disabled={false}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Tag"
    onClick={[Function]}
    onDelete={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    padding=""
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip=""
    top=""
    usedelete={false}
    visible={true}
    width=""
    xcss={null}
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      id=""
      left=""
      location="none"
      noedit={true}
      nohover={false}
      noripple={false}
      obj="Label"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="test tag"
      theme={null}
      tooltip=""
      top=""
      useedit={false}
      visible={true}
      width=""
      xcss={null}
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of the simple Tag instance 1`] = `
<Tag
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tag"
  onClick={[Function]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  usedelete={true}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tag"
      contentEditable={false}
      direction="right"
      disabled={true}
      errorMessage=""
      focus={false}
      height=""
      id=""
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Tag"
      onClick={[Function]}
      onDelete={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      tooltip=""
      top=""
      usedelete={true}
      visible={true}
      width=""
      xcss={null}
    >
      <div
        className="ui-tag sc-jzJRlG dUExft"
        contentEditable={false}
        direction="right"
        disabled={true}
        height=""
        id=""
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        selected={false}
        style={Object {}}
        width=""
      >
        <Label
          className=""
          contentEditable={false}
          direction="right"
          disabled={true}
          errorMessage=""
          focus={false}
          height=""
          id=""
          left=""
          location="none"
          noedit={true}
          nohover={false}
          noripple={false}
          obj="Label"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onUpdate={[Function]}
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="test tag"
          theme={null}
          tooltip=""
          top=""
          useedit={false}
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.span
              className="ui-label"
              contentEditable={false}
              disabled={true}
              innerRef={[Function]}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              sizing="normal"
              style={Object {}}
              suppressContentEditableWarning={true}
              visible={true}
            >
              <span
                className="ui-label sc-jTzLTM iPNzCZ"
                contentEditable={false}
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                suppressContentEditableWarning={true}
              >
                test tag
              </span>
            </styled.span>
          </ThemeProvider>
        </Label>
        <Styled(ButtonCircle)
          disabled={true}
          iconName="times"
          onClick={[Function]}
          sizing="small"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#d9534f",
              "color": "#d9534f",
              "opacity": "0.0",
            }
          }
          visible={true}
        >
          <ButtonCircle
            className="sc-fjdhpX dmcXUf"
            contentEditable={false}
            direction="right"
            disabled={true}
            errorMessage=""
            focus={false}
            height=""
            iconName="times"
            iconStyle=""
            id=""
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="ButtonCircle"
            onClick={[Function]}
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#d9534f",
                "color": "#d9534f",
                "opacity": "0.0",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <styled.div
                className="ui-button-circle sc-fjdhpX dmcXUf"
              >
                <div
                  className="ui-button-circle sc-fjdhpX dmcXUf sc-bZQynM lnWXHT"
                >
                  <styled.div
                    height="18px"
                    width="18px"
                  >
                    <div
                      className="sc-gzVnrw cZqARE"
                      height="18px"
                      width="18px"
                    >
                      <Styled(Button)
                        className="sc-fjdhpX dmcXUf"
                        contentEditable={false}
                        direction="right"
                        disabled={true}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="times"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="ButtonCircle"
                        onClick={[Function]}
                        padding=""
                        selected={false}
                        sizing="small"
                        style={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#d9534f",
                            "color": "#d9534f",
                            "opacity": "0.0",
                          }
                        }
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <Button
                          className="sc-fjdhpX dmcXUf sc-htoDjs eTCIvM"
                          contentEditable={false}
                          direction="right"
                          disabled={true}
                          errorMessage=""
                          focus={false}
                          height=""
                          iconName="times"
                          iconStyle=""
                          id=""
                          left=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          obj="ButtonCircle"
                          onClick={[Function]}
                          padding=""
                          selected={false}
                          sizing="small"
                          style={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#d9534f",
                              "color": "#d9534f",
                              "opacity": "0.0",
                            }
                          }
                          testing={true}
                          theme={null}
                          tooltip=""
                          top=""
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#c0c0c0",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "headerHoverColor": "#ffe11a",
                                "hoverColor": "#c0c0c0",
                                "inputBorderColor": "#c0c0c0",
                                "selectedBackgroundColor": "#1f8a70",
                                "selectedForegroundColor": "#ffe11a",
                                "tooltipBackgroundColor": "#708090",
                                "tooltipForegroundColor": "#ffffff",
                                "transitionDelay": "0.5s",
                              }
                            }
                          >
                            <styled.div
                              className="ui-button nohover sc-fjdhpX dmcXUf sc-htoDjs eTCIvM"
                              disabled={true}
                              id="Button-0"
                              onClick={[Function]}
                              style={
                                Object {
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#d9534f",
                                  "color": "#d9534f",
                                  "opacity": "0.0",
                                }
                              }
                              visible={true}
                            >
                              <div
                                className="ui-button nohover sc-fjdhpX dmcXUf sc-htoDjs eTCIvM sc-EHOje kiuasi"
                                disabled={true}
                                id="Button-0"
                                onClick={[Function]}
                                style={
                                  Object {
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#d9534f",
                                    "color": "#d9534f",
                                    "opacity": "0.0",
                                  }
                                }
                              >
                                <Icon
                                  className=""
                                  contentEditable={false}
                                  direction="right"
                                  disabled={false}
                                  errorMessage=""
                                  focus={false}
                                  height=""
                                  iconName="times"
                                  id=""
                                  imageFile=""
                                  left=""
                                  location="none"
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  obj="Icon"
                                  padding=""
                                  selected={false}
                                  sizing="small"
                                  style={Object {}}
                                  testing={true}
                                  theme={null}
                                  tooltip=""
                                  top=""
                                  visible={true}
                                  width=""
                                  xcss={null}
                                >
                                  <ThemeProvider
                                    theme={
                                      Object {
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "#c0c0c0",
                                        "color": "#000000",
                                        "headerBackgroundColor": "#004358",
                                        "headerForegroundColor": "#ffffff",
                                        "headerHoverColor": "#ffe11a",
                                        "hoverColor": "#c0c0c0",
                                        "inputBorderColor": "#c0c0c0",
                                        "selectedBackgroundColor": "#1f8a70",
                                        "selectedForegroundColor": "#ffe11a",
                                        "tooltipBackgroundColor": "#708090",
                                        "tooltipForegroundColor": "#ffffff",
                                        "transitionDelay": "0.5s",
                                      }
                                    }
                                  >
                                    <styled.i
                                      className="ui-icon fa fa-fw fa-times"
                                      contentEditable={false}
                                      direction="right"
                                      disabled={false}
                                      errorMessage=""
                                      focus={false}
                                      height=""
                                      iconName="times"
                                      id=""
                                      imageFile=""
                                      left=""
                                      location="none"
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      obj="Icon"
                                      padding=""
                                      selected={false}
                                      sizing="small"
                                      style={Object {}}
                                      testing={true}
                                      theme={null}
                                      tooltip=""
                                      top=""
                                      visible={true}
                                      width=""
                                      xcss={null}
                                    >
                                      <i
                                        className="ui-icon fa fa-fw fa-times sc-bdVaJa ktSNSh"
                                        contentEditable={false}
                                        direction="right"
                                        disabled={false}
                                        height=""
                                        id=""
                                        selected={false}
                                        style={Object {}}
                                        width=""
                                      />
                                    </styled.i>
                                  </ThemeProvider>
                                </Icon>
                              </div>
                            </styled.div>
                          </ThemeProvider>
                        </Button>
                      </Styled(Button)>
                    </div>
                  </styled.div>
                </div>
              </styled.div>
            </ThemeProvider>
          </ButtonCircle>
        </Styled(ButtonCircle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tag>
`;

exports[`Test making Tag invisible 1`] = `
<Tag
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tag"
  onClick={[Function]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  usedelete={true}
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tag"
      contentEditable={false}
      direction="right"
      disabled={true}
      errorMessage=""
      focus={false}
      height=""
      id=""
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Tag"
      onClick={[Function]}
      onDelete={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      tooltip=""
      top=""
      usedelete={true}
      visible={false}
      width=""
      xcss={null}
    >
      <div
        className="ui-tag sc-jzJRlG dYlSDE"
        contentEditable={false}
        direction="right"
        disabled={true}
        height=""
        id=""
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        selected={false}
        style={Object {}}
        width=""
      >
        <Label
          className=""
          contentEditable={false}
          direction="right"
          disabled={true}
          errorMessage=""
          focus={false}
          height=""
          id=""
          left=""
          location="none"
          noedit={true}
          nohover={false}
          noripple={false}
          obj="Label"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onUpdate={[Function]}
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="test tag"
          theme={null}
          tooltip=""
          top=""
          useedit={false}
          visible={false}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.span
              className="ui-label"
              contentEditable={false}
              disabled={true}
              innerRef={[Function]}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              sizing="normal"
              style={Object {}}
              suppressContentEditableWarning={true}
              visible={false}
            >
              <span
                className="ui-label sc-jTzLTM hLzGHH"
                contentEditable={false}
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                suppressContentEditableWarning={true}
              >
                test tag
              </span>
            </styled.span>
          </ThemeProvider>
        </Label>
        <Styled(ButtonCircle)
          disabled={true}
          iconName="times"
          onClick={[Function]}
          sizing="small"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#d9534f",
              "color": "#d9534f",
              "opacity": "0.0",
            }
          }
          visible={false}
        >
          <ButtonCircle
            className="sc-fjdhpX dmcXUf"
            contentEditable={false}
            direction="right"
            disabled={true}
            errorMessage=""
            focus={false}
            height=""
            iconName="times"
            iconStyle=""
            id=""
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="ButtonCircle"
            onClick={[Function]}
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#d9534f",
                "color": "#d9534f",
                "opacity": "0.0",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={false}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <styled.div
                className="ui-button-circle sc-fjdhpX dmcXUf"
              >
                <div
                  className="ui-button-circle sc-fjdhpX dmcXUf sc-bZQynM lnWXHT"
                >
                  <styled.div
                    height="18px"
                    width="18px"
                  >
                    <div
                      className="sc-gzVnrw cZqARE"
                      height="18px"
                      width="18px"
                    >
                      <Styled(Button)
                        className="sc-fjdhpX dmcXUf"
                        contentEditable={false}
                        direction="right"
                        disabled={true}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="times"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="ButtonCircle"
                        onClick={[Function]}
                        padding=""
                        selected={false}
                        sizing="small"
                        style={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#d9534f",
                            "color": "#d9534f",
                            "opacity": "0.0",
                          }
                        }
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={false}
                        width=""
                        xcss={null}
                      >
                        <Button
                          className="sc-fjdhpX dmcXUf sc-htoDjs eTCIvM"
                          contentEditable={false}
                          direction="right"
                          disabled={true}
                          errorMessage=""
                          focus={false}
                          height=""
                          iconName="times"
                          iconStyle=""
                          id=""
                          left=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          obj="ButtonCircle"
                          onClick={[Function]}
                          padding=""
                          selected={false}
                          sizing="small"
                          style={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#d9534f",
                              "color": "#d9534f",
                              "opacity": "0.0",
                            }
                          }
                          testing={true}
                          theme={null}
                          tooltip=""
                          top=""
                          visible={false}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#c0c0c0",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "headerHoverColor": "#ffe11a",
                                "hoverColor": "#c0c0c0",
                                "inputBorderColor": "#c0c0c0",
                                "selectedBackgroundColor": "#1f8a70",
                                "selectedForegroundColor": "#ffe11a",
                                "tooltipBackgroundColor": "#708090",
                                "tooltipForegroundColor": "#ffffff",
                                "transitionDelay": "0.5s",
                              }
                            }
                          >
                            <styled.div
                              className="ui-button nohover sc-fjdhpX dmcXUf sc-htoDjs eTCIvM"
                              disabled={true}
                              id="Button-0"
                              onClick={[Function]}
                              style={
                                Object {
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#d9534f",
                                  "color": "#d9534f",
                                  "opacity": "0.0",
                                }
                              }
                              visible={false}
                            >
                              <div
                                className="ui-button nohover sc-fjdhpX dmcXUf sc-htoDjs eTCIvM sc-EHOje eTZlZH"
                                disabled={true}
                                id="Button-0"
                                onClick={[Function]}
                                style={
                                  Object {
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#d9534f",
                                    "color": "#d9534f",
                                    "opacity": "0.0",
                                  }
                                }
                              >
                                <Icon
                                  className=""
                                  contentEditable={false}
                                  direction="right"
                                  disabled={false}
                                  errorMessage=""
                                  focus={false}
                                  height=""
                                  iconName="times"
                                  id=""
                                  imageFile=""
                                  left=""
                                  location="none"
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  obj="Icon"
                                  padding=""
                                  selected={false}
                                  sizing="small"
                                  style={Object {}}
                                  testing={true}
                                  theme={null}
                                  tooltip=""
                                  top=""
                                  visible={true}
                                  width=""
                                  xcss={null}
                                >
                                  <ThemeProvider
                                    theme={
                                      Object {
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "#c0c0c0",
                                        "color": "#000000",
                                        "headerBackgroundColor": "#004358",
                                        "headerForegroundColor": "#ffffff",
                                        "headerHoverColor": "#ffe11a",
                                        "hoverColor": "#c0c0c0",
                                        "inputBorderColor": "#c0c0c0",
                                        "selectedBackgroundColor": "#1f8a70",
                                        "selectedForegroundColor": "#ffe11a",
                                        "tooltipBackgroundColor": "#708090",
                                        "tooltipForegroundColor": "#ffffff",
                                        "transitionDelay": "0.5s",
                                      }
                                    }
                                  >
                                    <styled.i
                                      className="ui-icon fa fa-fw fa-times"
                                      contentEditable={false}
                                      direction="right"
                                      disabled={false}
                                      errorMessage=""
                                      focus={false}
                                      height=""
                                      iconName="times"
                                      id=""
                                      imageFile=""
                                      left=""
                                      location="none"
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      obj="Icon"
                                      padding=""
                                      selected={false}
                                      sizing="small"
                                      style={Object {}}
                                      testing={true}
                                      theme={null}
                                      tooltip=""
                                      top=""
                                      visible={true}
                                      width=""
                                      xcss={null}
                                    >
                                      <i
                                        className="ui-icon fa fa-fw fa-times sc-bdVaJa ktSNSh"
                                        contentEditable={false}
                                        direction="right"
                                        disabled={false}
                                        height=""
                                        id=""
                                        selected={false}
                                        style={Object {}}
                                        width=""
                                      />
                                    </styled.i>
                                  </ThemeProvider>
                                </Icon>
                              </div>
                            </styled.div>
                          </ThemeProvider>
                        </Button>
                      </Styled(Button)>
                    </div>
                  </styled.div>
                </div>
              </styled.div>
            </ThemeProvider>
          </ButtonCircle>
        </Styled(ButtonCircle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tag>
`;

exports[`Test retrieval of Tag props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Tag",
  "onClick": [Function],
  "onDelete": [Function],
  "onMouseOut": [Function],
  "onMouseOver": [Function],
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "usedelete": false,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
